Fixat buggen för navbar med z-index likt bootstrap (z-index: 1030;). Kunde inte vad det var som ställde till det.

--- a/MiniFB/Content/Base.css
+++ b/MiniFB/Content/Base.css
@@ -36,6 +36,7 @@
     top: 0;
     position: fixed;
     width: 100%;
+    z-index: 1030;
 }
 
 .navbar .brand
